Revert "eliminar cosas añadida"
This reverts commit 9e70bf05dabccfcd75cf41007cabacb8b59a17e8.

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        
+        <title>Hola, Mundo</title>
     </head>
     <body>    
 	    <p><strong>¡¡Hola, Mundo!!</strong></p>
+		<p>Nueva cosa añadida</p>
     </body>
 </html>
